[workspace]
members = [
    "crates/onionlink-core",
    "crates/onionlink-cli",
    "crates/onionlink-py",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Yehor Smoliakov <egorsmkv@gmail.com>"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = false
debug = false
