[package]
name = "onionlink-core"
description = "Core Tor v3 onion-service client protocol implementation for onionlink"
documentation = "https://docs.rs/onionlink-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
aes = "0.8"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std"] }
ctr = "0.9"
curve25519-dalek = "4.1"
hmac = "0.12"
log = "0.4"
rand = "0.8"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
serde_json = "1"
