[package]
name = "onionlink-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
onionlink-core = { path = "../onionlink-core" }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1.13", features = ["rt", "rt-multi-thread"] }

[build-dependencies]
pyo3-build-config = "0.28"
